--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,11 @@ legend {
 	width: 100%;
 }
 
+label input[type="checkbox"],
+[disabled] {
+  background-color: grey;
+}
+
 label {
 	color: #000;
 	display: block;
